Added Hangfire.EfCore.Outbox to extensions (#115)
* Added Hangfire.EfCore.Outbox to extensions

Proposing https://github.com/BredStik/Hangfire.EfCore.Outbox to Hangfire extensions.  Also, I'd like to publish on nuget with the Hangfire prefix with your permission.

* Renamed Hangfire.EfCore.Outbox to Hangfire.Community.Outbox

* Tried to put my extension in alpha order

--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -20,6 +20,11 @@
       url: https://github.com/bluehands/Hangfire.Community.CarbonAwareExecution
       author: bluehands
 
+    - name: Hangfire.Community.Outbox
+      description: Outbox pattern implementation for enqueuing or scheduling Hangfire jobs using EntityFramework Core.
+      url: https://github.com/BredStik/Hangfire.Community.Outbox
+      author: BredStik
+
     - name: IdentityStream.Hangfire.Console
       description: Updated fork of Hangfire.Console, a job console extension for Hangfire
       url: https://github.com/IdentityStream/Hangfire.Console
