--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -195,6 +195,11 @@
       url: https://github.com/SerbanApostol/Hangfire.RecurringJobAdmin
       author: SerbanApostol
 
+    - name: Effektor.Hangfire.Idempotent
+      description: Idempotent job filter for Hangfire.
+      url: https://github.com/Effektor/Hangfire.Idempotent
+      author: Effektor
+
 - name: Storages
   description: The following community projects allow you to use your favorite technology
                as a job storage.
