--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -281,7 +281,12 @@
     - name: Hangfire.Storage.SQLite
       description: An Alternative SQLite Storage for Hangfire.
       url: https://github.com/raisedapp/Hangfire.Storage.SQLite
-      author: felixclase         
+      author: felixclase
+      
+    - name: Hangfire.DMStorage
+      description: Hangfire.DMStorage provides Dameng (DM) database storage support for Hangfire, a popular .NET library used for managing background tasks and jobs.
+      url: https://github.com/findersky/Hangfire.DMStorage
+      author: findersky
 
 - name: IoC Containers
   description: These projects simplify the integration between Hangfire and
