--- a/.github/workflows/publish-hangfire-io.yml
+++ b/.github/workflows/publish-hangfire-io.yml
@@ -10,6 +10,9 @@ jobs:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     name: Build and Deploy Job
+    permissions:
+      contents: read
+      statuses: write
     steps:
       - uses: actions/checkout@v2
       - name: Build And Deploy
