Update the Hangfire.Mongo url and author
The Hangfire-Mongo organization doesn't exist anymore, it redirects to https://github.com/gottscj/Hangfire.Mongo

--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -246,8 +246,8 @@
       author: perrich
       
     - name: Hangfire.Mongo
-      url: https://github.com/Hangfire-Mongo/Hangfire.Mongo
-      author: Hangfire-Mongo
+      url: https://github.com/gottscj/Hangfire.Mongo
+      author: gottscj
       
     - name: Hangfire.MySqlStorage
       url: https://github.com/arnoldasgudas/Hangfire.MySqlStorage
