Add Hangfire.Community.Dashboard.Heatmap extension
Added a new entry for Hangfire.Community.Dashboard.Heatmap on extensions.yml

--- a/_data/extensions.yml
+++ b/_data/extensions.yml
@@ -5,6 +5,11 @@
 
 - name: Common
   projects:
+    - name: Hangfire.Community.Dashboard.Heatmap
+      description: Adds a visual timeline and heatmap view to Hangfire Dashboard, showing when recurring jobs are scheduled throughout the day.
+      url: https://github.com/brodrigz/Hangfire.Community.Dashboard.Heatmap
+      author: brodrigz
+  
     - name: IeuanWalker.Hangfire.RecurringJob
       description: Automatically generates the recurring job registration code using source generators
       url: https://github.com/IeuanWalker/Hangfire.RecurringJob
